<resources>
    <string name="app_name">OnlyPets</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_services">Incio</string>
    <string name="title_maps">Encuentrame</string>
    <string name="title_lost">Seccion de perdidos</string>
    <string name="title_chat">ChatMilan</string>
    <string name="veterinarios">Veterinarias</string>
    <string name="Tiendas">Tiendas</string>
    <string name="Peluqueria">Peluqueria</string>
    <string name="Otros">Otros</string>
    <string name="onlyPets">OnlyPets</string>
    <string name="mapAPIKey">AIzaSyCmwXRFkwpRQLzIOV_R9etYxapEgV3PqIM</string>
    <string name="tiendas">Tiendas</string>
    <string name="peluquerias">Peluquerias</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="bienvenidos">Bienvenido a OnlyPets</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="register">Regístrate</string>
    <string name="googleLogin">Continuar con Google</string>
    <string name="facebookLogin">Continuar con Facebook</string>
    <string name="preguntaCuenta">¿Aún no tienes una cuenta?</string>
    <string name="login">Ingresar</string>
    <string name="register_title">Datos de registro</string>
    <string name="register_hint_email">Correo electronico</string>
    <string name="register_hint_password_confirm">Ingrese nuevamente la contraseña</string>
    <string name="register_wrong_passsword">Las contraseñas no coinciden</string>
    <string name="register_button">Crear cuenta</string>
    <string name="reservar_button">Agendar Cita</string>
    <string name="reservar_title">Datos de reserva</string>
    <string name="owner_name">Nombre del dueño</string>
    <string name="pet_name">Nombre de la mascota</string>
    <string name="fecha">Fecha deseada</string>
    <string name="hora">Hora deseada</string>
    <string name="send_form_button">ENVIAR</string>
    <string name="owner_id">Nro de carnet</string>
    <string name="veterinaria1">Veterinaria Buen Pastor</string>

</resources>