<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <View
        android:id="@+id/view3"
        android:layout_width="410dp"
        android:layout_height="150dp"
        android:background="@color/teal_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/reservar_title"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSendForm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ownerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_edit_texts"

                android:drawableStart="@drawable/ic_user4"
                android:drawablePadding="10dp"

                android:hint="@string/owner_name"
                android:imeOptions="actionNext"

                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp" />
            <EditText
                android:id="@+id/ownerID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_edit_texts"
                android:drawablePadding="10dp"

                android:hint="@string/owner_id"
                android:imeOptions="actionNext"

                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp" />

            <EditText
                android:id="@+id/petName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_edit_texts"

                android:drawableStart="@drawable/paw_icon"
                android:drawablePadding="10dp"

                android:hint="@string/pet_name"
                android:imeOptions="actionNext"

                android:maxLines="1"
                android:padding="10dp" />

            <EditText
                android:id="@+id/editTextDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="date"
                android:hint="@string/fecha"
                android:drawableStart="@drawable/time_icon"
                android:drawablePadding="10dp"/>

            <EditText
                android:id="@+id/editTextTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="time"
                android:hint="@string/hora"
                android:drawableStart="@drawable/calendar_icon"
                android:drawablePadding="10dp"/>

            />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSendForm"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:background="@drawable/shape_edit_texts"
        android:backgroundTint="@color/teal_200"
        android:text="@string/send_form_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>