<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:background="@color/purple_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/register_title"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnCreateAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_edit_texts"
                android:backgroundTint="?attr/colorSurfaceVariant"
                android:drawableStart="@drawable/ic_user4"
                android:drawablePadding="10dp"

                android:hint="@string/user"
                android:imeOptions="actionNext"

                android:inputType="text"
                android:maxLines="1"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_edit_texts"
                android:backgroundTint="?attr/colorSurfaceVariant"
                android:drawableStart="@drawable/email1"
                android:drawablePadding="10dp"

                android:hint="@string/register_hint_email"
                android:imeOptions="actionNext"

                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_edit_texts"
                android:backgroundTint="?attr/colorSurfaceVariant"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:imeOptions="actionNext"

                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/shape_edit_texts"
                android:backgroundTint="?attr/colorSurfaceVariant"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"

                android:hint="@string/register_hint_password_confirm"
                android:imeOptions="actionDone"
                android:text="@={viewModel.confirmPassword}"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/register_wrong_passsword"
                android:textColor="#F44336"
                 />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:background="@drawable/shape_edit_texts"
        android:backgroundTint="@color/teal_200"
        android:text="@string/register_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>